--- a/organizacoes/templates/organizacoes/organizacoes_tabela.html
+++ b/organizacoes/templates/organizacoes/organizacoes_tabela.html
@@ -13,11 +13,12 @@
 
 {% block content %}
 
-  <div class="table-responsive">
+  {% include "edicoes.html" %}
 
-    {% for organizacoes,periodo in anos %} 
-      <big>{{periodo}}</big>
-      <table id="organizacoes"class="table table-bordered table-hover table-sm" style="width: auto;">
+  <div id="atualizar">
+    {% include "tabelas_top_ml.html" with tabela="Organizacoes" cabecalhos=cabecalhos %}
+
+      {% comment %} <table id="OrganizacoesTable" class="table table-bordered table-hover table-sm" style="width: auto;">
         <thead class="table-info">
           <tr>
             <th scope="col" style="text-align: center;width:425px;"><span style="margin-right: 0.6ex;">
@@ -27,30 +28,28 @@
               {% lng "Projetos" "Projects" %}
             </span></th>
           </tr>
-        </thead>
-        {% for organizacao,projetos in organizacoes %} 
-          <tr class="item">
-            
-            <td>{% include "organizacoes/includes/bloco_organizacao.html" with organizacao=organizacao %}</td>
+        </thead> {% endcomment %}
+      {% for organizacao, projetos in organizacoes %} 
+        <tr class="item">
+          
+          <td>{% include "organizacoes/includes/bloco_organizacao.html" with organizacao=organizacao %}</td>
 
-            <td style="text-align: center;" data-toggle="tooltip" data-html="true" animation="true" title="
-              {% for projeto in projetos %}
-                &bull;
-                {{projeto.get_titulo}}
-                [{{projeto.orientador}}]
-                <br>
-              {% endfor %}
-            "> 
-              {{projetos|length}}
-            </td>
-          </tr>
-        {% endfor %}
-      </table>
-      <br>
-    {% endfor %}
-  
+          <td style="text-align: center;" data-toggle="tooltip" data-html="true" animation="true" title="
+            {% for projeto in projetos %}
+              &bull;
+              {{projeto.get_titulo}}
+              [{{projeto.orientador}}]
+              <br>
+            {% endfor %}
+          "> 
+            {{projetos|length}}
+          </td>
+        </tr>
+      {% endfor %}
+    {% include "tabelas_bottom.html" %}
   </div>
 
-  {% include "tabelas_simples_scripts.html" %}
+  {% include "edicoes_ajax.html" with tabela="Organizacoes" %}
+  {% comment %} {% include "tabelas_simples_scripts.html" %} {% endcomment %}
 
 {% endblock %}
