--- a/templates/plot_barras.html
+++ b/templates/plot_barras.html
@@ -113,7 +113,7 @@ function lingua_grafico() {
     window.g_prop.data.datasets[0].label = window.g_prop.data.datasets[0].label_en;
     window.g_prop.data.datasets[1].label = window.g_prop.data.datasets[1].label_en;
   }
-  window.window.g_prop.update();
+  window.g_prop.update();
 }
 lingua_grafico();
 document.addEventListener("languageChanged", lingua_grafico);
