--- a/templates/generic_ml.html
+++ b/templates/generic_ml.html
@@ -22,6 +22,13 @@
       text-align: center;
       margin-bottom: 20px;
     }
+    .feedback-message-longa {
+      font-size: 1.2rem;
+      font-weight: 500;
+      color: #333;
+      text-align: left;
+      margin-bottom: 20px;
+    }
 
     .feedback-message-error {
       font-size: 1.2rem;
@@ -72,6 +79,12 @@
         {% if mensagem_erro %}
           <div class="feedback-message-error">
             {% lng mensagem_erro.pt|safe mensagem_erro.en|safe %}
+          </div>
+        {% endif %}
+
+        {% if mensagem_l %}  {% comment %} Mensagem longa alinhada a esquerda {% endcomment %}
+          <div class="feedback-message-longa">
+            {% lng mensagem_l.pt|safe mensagem_l.en|safe %}
           </div>
         {% endif %}
 
