jogando para o arquivo CSS

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
   {% load linguas %}
   <link rel="stylesheet" href="{% static 'css/indexes.css' %}">
 
+
+
+  {% comment %} vvvv   REMOVER   vvvvvv {% endcomment %}
   <style>
 
     .c_destaque {
@@ -39,6 +42,8 @@
     }
 
   </style>
+
+  {% comment %} ˆˆˆˆˆˆˆ REMOVER ˆˆˆˆˆˆˆˆ {% endcomment %}
 
 {% endblock %}
 
