editar mentoria projeto pelo agendamento

--- a/professores/templates/professores/bancas_view.html
+++ b/professores/templates/professores/bancas_view.html
@@ -442,7 +442,7 @@
       <br>
       <div style="overflow-wrap: break-word;">
         &#9733;
-        {% lng "Formulário de Avaliação:" "Evaluation Form:" %}
+        {% lng "Formulário de Avaliação" "Evaluation Form" %}:
         <a class="url_reativo" target="_blank" rel="noopener noreferrer" 
           href="{% url 'banca_avaliar' banca.slug %}">
           https://{{ request.get_host }}{% url 'banca_avaliar' banca.slug %}
